WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
151443
[EFL] Fix -Winconsistent-missing-override clang warnings
https://bugs.webkit.org/show_bug.cgi?id=151443
Summary
[EFL] Fix -Winconsistent-missing-override clang warnings
Csaba Osztrogonác
Reported
2015-11-19 05:26:27 PST
../../Source/WebCore/loader/EmptyClients.h:133:18: warning: 'delegatedScrollRequested' overrides a member function but is not marked 'override' [-Winconsistent-missing-override] virtual void delegatedScrollRequested(const IntPoint&) { } ^ ../../Source/WebCore/page/ChromeClient.h:168:18: note: overridden virtual function is here virtual void delegatedScrollRequested(const IntPoint&) = 0; ^ In file included from ../../Source/WebCore/page/MainFrame.cpp:30: ../../Source/WebCore/loader/EmptyClients.h:136:18: warning: 'scheduleAnimation' overrides a member function but is not marked 'override' [-Winconsistent-missing-override] virtual void scheduleAnimation() { } ^ ../../Source/WebCore/page/ChromeClient.h:183:18: note: overridden virtual function is here virtual void scheduleAnimation() = 0; ^ And there are many similar warnings should be fixed.
Attachments
Patch
(11.56 KB, patch)
2015-11-19 05:30 PST
,
Csaba Osztrogonác
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Csaba Osztrogonác
Comment 1
2015-11-19 05:30:47 PST
Created
attachment 265862
[details]
Patch
WebKit Commit Bot
Comment 2
2015-11-19 09:38:48 PST
Comment on
attachment 265862
[details]
Patch Clearing flags on attachment: 265862 Committed
r192628
: <
http://trac.webkit.org/changeset/192628
>
WebKit Commit Bot
Comment 3
2015-11-19 09:38:52 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug