[EFL] Fix -Winconsistent-missing-override clang warnings https://bugs.webkit.org/show_bug.cgi?id=151443

Reviewed by Darin Adler.

Source/WebCore:

* loader/EmptyClients.h:
(WebCore::EmptyChromeClient::delegatedScrollRequested):
(WebCore::EmptyChromeClient::scheduleAnimation):

Source/WebKit2:

* Shared/CoordinatedGraphics/CoordinatedBackingStore.h:
* UIProcess/CoordinatedGraphics/CoordinatedLayerTreeHostProxy.h:
* UIProcess/CoordinatedGraphics/WebView.h:
* WebProcess/WebPage/CoordinatedGraphics/CoordinatedDrawingArea.h:
(WebKit::CoordinatedDrawingArea::layerTreeStateIsFrozen):
(WebKit::CoordinatedDrawingArea::layerTreeHost):
* WebProcess/WebPage/CoordinatedGraphics/CoordinatedLayerTreeHost.h:
(WebKit::CoordinatedLayerTreeHost::layerTreeContext):
(WebKit::CoordinatedLayerTreeHost::pauseRendering):
(WebKit::CoordinatedLayerTreeHost::resumeRendering):


Canonical link: https://commits.webkit.org/169598@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@192628 268f45cc-cd09-0410-ab3c-d52691b4dbfc